<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Filos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     
    <string name="facebook_app_id">365914006918286</string>
    
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="settings">Settings</string>
    <string name="action_people">Scan your area</string>
    <string name="action_people_default">See who\'s around you</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="temp_app_name">Filos - Rediscover Your Friends</string>
    
    <string name="title_activity_matched_user">MatchedUserActivity</string>
    <string name="title_activity_user_list">All App Users</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_filos_results">Filos Results</string>
    
    <string name="filos_logo_bottom_text">Click to scan for people you\nmay have friends with!</string>
    <string name="filos_logo_description">Filos App Logo</string>
    <string name="sign_in_fb">Sign in with Facebook</string>
    <string name="splash_welcome_message">Start finding people you may know</string>
    <string name="result_user_profile_pic">Profile picture of all matched users</string>
    
    <string name="filos_friends_in_common">Friends in common</string>
    <string name="filos_contacts_in_common">Contacts in common</string>
    
    <string name="filos_popup_no_users_nearby">Sorry, no users nearby</string>
    <string name="filos_try_again">Try again soon</string>
    <string name="filos_ok">Ok</string>

</resources>
