<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/filos_popup_no_users_nearby" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text="@string/filos_try_again" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/filos_blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:background="@color/filos_blue"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/filos_ok"
        android:clickable="true"
        android:onClick="onBackPressed" />

</LinearLayout>