<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_bg"
    android:gravity="center_vertical"
    android:weightSum="100" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="34.67dp"
        android:layout_marginRight="34.67dp"
        android:layout_weight="54"
        android:background="#CFFFFFFF"
        android:gravity="center"
        android:weightSum="100" >
        
        <ImageView 
            android:id="@+id/filos_logo"
            android:src="@drawable/filos_logo"
            android:contentDescription="@string/filos_logo_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <TextView 
            android:id="@+id/splash_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_welcome_message"
            android:textColor="#707173"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <com.facebook.widget.LoginButton
            xmlns:fb="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            fb:login_text="@string/sign_in_fb"
            fb:logout_text="Logout!" />
    </LinearLayout>

    <!--  
    We can change the text and style of the login button!
    -->
  

</LinearLayout>
